--- a/8/css/style.css
+++ b/8/css/style.css
@@ -106,12 +106,13 @@ img {
 /* Main header */
 
 .page-wrap {
+  background-color: var(--basic-white);
   box-shadow: 0px 5px 15px var(--page-shadow);
 }
 
-.main-header {
+/* .main-header {
   background-color: var(--basic-white);
-}
+} */
 
 /* Navigation Grids */
 
@@ -254,11 +255,11 @@ img {
   object-fit: cover;
 }
 
-.advantages-item-accent:first-child  .advantages-card {
+.advantages-item-accent:nth-child(odd)  .advantages-card {
   grid-column: 1 / 2;
 }
 
-.advantages-item-accent:nth-child(2) .advantages-card {
+.advantages-item-accent:nth-child(even) .advantages-card {
   order: 1;
   grid-column: 3 / 4;
 }
@@ -359,7 +360,7 @@ img {
 
 .hotel-search-section {
   padding-top: 55px;
-  background-color: var(--basic-white);
+  /* background-color: var(--basic-white); */
 }
 
 .hotel-search-slogan {
@@ -422,17 +423,9 @@ img {
 
 /* Hotels Grid*/
 
-
-.catalog-content {
-  /* лишнее??display: grid;
-  grid-template-rows: min-content min-content 1fr; */
-  background-color: var(--basic-white);
-}
-
 /* Hotel Filters */
 
 .filters-section {
-  color: var(--basic-white);
   background-color: var(--light-blue);
   background-image: url("../img/background-catalog.jpg");
   background-size: cover;
@@ -466,7 +459,7 @@ img {
 }
 
 .filters-submit-button {
-  color: var(--basic-whiter);
+  color: var(--basic-white);
   text-transform: uppercase;
   background-color: transparent;
   border: 2px solid var(--basic-white);
