--- a/11/css/style.css
+++ b/11/css/style.css
@@ -440,27 +440,38 @@ img {
   width: 568px;
 }
 
-/* Hotel search form */
-.hotel-search-form {
- position: relative;
- margin: 0 auto;
- width: 568px;
+/* Map  */
+.section-map {
+  position: relative;
+  overflow: hidden;
 }
 
-.search-form-wrap{
-  position: absolute;
-  /* transform: translateY(-100%);
-  z-index: -1; ??? */
+.section-map img {
+  display: block;
 }
+
+/* Hotel search form */
+/* .hotel-search-form {
+  position: relative;
+  margin: 0 auto;
+} */
 
 .search-form-wrap {
+  position: absolute;
+  top: 0;
+  left: 316px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  width: 568px;
   padding: 55px;
   background-color: var(--basic-white);
   box-shadow: 0px 7px 15px var(--form-shadow);
- /* outline: 2px solid tomato; */
+  transform: translateY(-100%);
+}
+
+.search-form-open {
+  transform: translateY(0);
 }
 
 .hotel-search-paragraph {
@@ -554,11 +565,6 @@ img {
   margin-top: 55px;
   padding: 16px;
 }
-/* Map  */
-
-.section-map {
-  height: 594px; /* без заданной высоты снизу от картинки появляются лишние 5px белой полоской - откуда не поняла */
-}
 
 /* Hotel Filters */
 
@@ -631,7 +637,7 @@ img {
 
 переименовать filters-price-input?? */
 
-.filters-input {
+.filters-price-input {
   width: 157px;
   padding-top: 8px;
   padding-bottom: 8px;
@@ -739,7 +745,7 @@ img {
  }
 
 .direction-link-current svg {
- fill: var(--light-blue);
+  fill: var(--light-blue);
 }
 
 /* Hotel Results -  Grids */
@@ -833,14 +839,13 @@ img {
   padding: 18px 60px 20px;
   padding-bottom: 20px;
   align-items: center;
-  min-height: 120px;
+  min-height: 120px;s
 }
 
 .main-footer-index {
   position: relative;
   margin-top: -120px;
   background-color: var(--footer-bg);
-  /* outline: 1px solid tomato; */
   z-index: 1;
 }
 
